The following list contains all changes to pgAdmin3, as present in cvs. 
<ul>
<li>A version number denotes the release version, which contains the patch or feature mentioned.
<li>*** marks fixes that are backported to stable branch, and will be included in the next maintenance release.
<li>Unmarked fixes are experimental and are contained in snapshots only.
</ul>
<br>
<ul>
    <li>2005-06-03 AP        Support for pgsql 8.1 aggregate sortop
    <li>2005-06-03 AP        Support for pgsql 8.1 pg_stat_activity
    <li>2005-06-03 AP        Support for pgsql 8.1 instrumentation
    <li>2005-06-01 AP        Support for Procedures aka functions "with out-parameters"
    <li>2005-06-01 AP        Support for EDB8.0
    <li>2005-05-31 DP  1.2.3 Fix domain RE SQL, per Ivan
    <li>2005-05-31 DP  1.2.3 Add missing ; to RE SQL, per Ivan
    <li>2005-05-27 DP        New WiX based installer for Win32
    <li>2005-05-25 DP        Cleanup doc location code for internal consistency
    <li>2005-05-25 DP        Reorganise doc index, cleanup inappropriate/old docs and improve admin pack documentation
    <li>2005-05-24 DP        Add pgAgent service/daemon, pgAdmin control interface and documentation
    <li>2005-05-10 HS  1.2.2 Display comments on contraints properly
    <li>2005-05-08 DP        Major source code reshuffle
    <li>2005-05-08 DP        Overhaul *nix automake build system
    <li>2005-03-25 DP        Mac OSX support [Florian G. Pflug]
    <li>2005-04-22 AP        more Hint enhancements
    <li>2005-04-19 AP        Hint enhancements
    <li>2005-04-18 AP        Unix Domain Socket additional stuff
    <li>2005-04-18 AP        switch to wxWidgets 2.6
    <li>2005-04-15 DP        Unix Domain Socket support as inspired by Dominique Quatravaux
    <li>2005-04-07 AP        VACUUM hint
    <li>2005-04-04 AP        Control dependent win32 services
    <li>2005-04-01 AP        Speed up of column property retrieval
    <li>2005-04-01 DP  1.2.2 Fix changing of view ownership