@@ -213,7 +213,11 @@ wxString frmBackup::getCmdPart2()
         {
             cmd.Append(wxT(" -F p"));
             if (chkOnlyData->GetValue())
+            {
                 cmd.Append(wxT(" -a"));
+                if (chkDisableTrigger->GetValue())
+                    cmd.Append(wxT(" --disable-triggers"));
+            }
             else
             {
                 if (chkOnlySchema->GetValue())
@@ -226,8 +230,6 @@ wxString frmBackup::getCmdPart2()
                     cmd.Append(wxT(" -C"));
                 if (chkDropDb->GetValue())
                     cmd.Append(wxT(" -c"));
-                if (chkDisableTrigger->GetValue())
-                    cmd.Append(wxT(" --disable-triggers"));
             }
             break;
         }
