@@ -17,6 +17,7 @@ The following list contains all changes to pgAdmin3, as present in cvs.
 </ul>
 <br>
 <ul>
+    <li>2005-06-09 DP  1.2.3 Fix disable triggers option for data only plain text backups per Howard Cole.
     <li>2005-06-03 AP        Support for pgsql 8.1 aggregate sortop
     <li>2005-06-03 AP        Support for pgsql 8.1 pg_stat_activity
     <li>2005-06-03 AP        Support for pgsql 8.1 instrumentation
